feat: Add user authentication, delete functionality, and fix MCQ logic